--- a/_config.yml
+++ b/_config.yml
@@ -14,10 +14,10 @@ baseurl: ""
 # Of course don't forget to change the username and projectname to YOUR username and project
 
 # Name of website
-title: My website
+title: Teampass.Net
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: A collaborative passwords manager
 
 # --- Navigation bar options --- #
 
@@ -30,19 +30,20 @@ navbar-links:
   Home: ""
   About Me: "aboutme"
   Contact: "contact"
+  Languages: "languages"
   
 # --- Footer options --- #
 
 # Change all these values or delete the ones you don't want.
 # Important: you must keep the "name" parameter, everything else you can remove
 author:
-  name: Some Person
-  email: "youremail@domain.com"
-  facebook: yourname  # eg. daattali
-  github: yourname    # eg. daattali
-  twitter: yourname   # eg. daattali
-  linkedin: yourlink  # eg. "pub/dean-attali/8/946/143"
-  stackoverflow: yourlink  # eg. "users/3943160/daattali"
+  name: Nils Laumaillé
+  email: "nils@teampass.net"
+  facebook: nils.laumaille  # eg. daattali
+  github: nilsteampassnet    # eg. daattali
+  twitter: theteampass   # eg. daattali
+  #linkedin: yourlink  # eg. "pub/dean-attali/8/946/143"
+  #stackoverflow: yourlink  # eg. "users/3943160/daattali"
  
 # Select which links to show in the footer
 footer-links-active:
@@ -92,6 +93,7 @@ defaults:
 # Exclude these files from production site
 exclude:
   - CNAME
+  - CNAME1
   - LICENSE
   - README.md
 
@@ -106,4 +108,3 @@ prose:
     - /css
     - /img
     - /js
-    
