--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ navbar-links:
   Contact: "contact"
   Languages: "languages"
   Reqs: "requirements"
-  Features: "features"
+  Features: "feat"
   #License: "license"
   Donation: "donation"
   
