--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
 #url: "http://nilsteampassnet.github.io"
 url:"http://teampass.net"
-baseurl: ""
+baseurl: "/"
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/projectname"
