--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
 #url: "http://nilsteampassnet.github.io"
 url:"http://teampass.net"
-#baseurl: ""
+baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/projectname"
@@ -48,7 +48,7 @@ author:
   facebook: nils.laumaille  # eg. daattali
   github: nilsteampassnet    # eg. daattali
   twitter: theteampass   # eg. daattali
-  #linkedin: yourlink  # eg. "pub/dean-attali/8/946/143"
+  linkedin: https://www.linkedin.com/in/nlaumaille  # eg. "pub/dean-attali/8/946/143"
   #stackoverflow: yourlink  # eg. "users/3943160/daattali"
  
 # Select which links to show in the footer
@@ -58,7 +58,7 @@ footer-links-active:
   email: true
   twitter: true
   github: true
-  linkedin: false
+  linkedin: true
   stackoverflow: false
 
 # How to display the link to the website in the footer
