--- a/_config.yml
+++ b/_config.yml
@@ -5,8 +5,8 @@
 
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
 #url: "http://nilsteampassnet.github.io"
-url:"http://teampass.net"
-baseurl: ""
+#url:"http://teampass.net"
+baseurl: "http://teampass.net"
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/projectname"
