--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,9 @@
 # baseurl is the website's URL without the hostname
 
 # If you are building a simple GitHub user page (username.github.io) then use these settings:
-#url: "http://nilsteampassnet.github.io"
-url:"http://teampass.net"
-baseurl: "."
+url: "http://nilsteampassnet.github.io"
+#url:"http://teampass.net"
+baseurl: ""
 
 # If you are building a GitHub project page then use these settings:
 #url: "http://username.github.io/projectname"
