--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ author:
   facebook: nils.laumaille  # eg. daattali
   github: nilsteampassnet    # eg. daattali
   twitter: theteampass   # eg. daattali
-  linkedin: https://www.linkedin.com/in/nlaumaille  # eg. "pub/dean-attali/8/946/143"
+  linkedin: nilslaumaille  # eg. "pub/dean-attali/8/946/143"
   #stackoverflow: yourlink  # eg. "users/3943160/daattali"
  
 # Select which links to show in the footer
