--- a/_config.yml
+++ b/_config.yml
@@ -94,7 +94,7 @@ defaults:
     scope:
       path: "" # all files
     values:
-      layout: "default"
+      layout: "base"
 
 # Exclude these files from production site
 exclude:
