--- a/_config.yml
+++ b/_config.yml
@@ -24,19 +24,24 @@ description: A collaborative passwords manager
 
 # Image to show in the navigation bar - image must be a square (width = height)
 # Remove this parameter if you don't want an image in the navbar
-#avatar: "/img/logo_home.png"
+avatar: "/img/avatar-icon.png"
 
 # List of links in the navigation bar
 navbar-links:
-  About: "about"
-  Categories: "categories"
-  Tags: "tags"
-  Contact: "contact"
-  Languages: "languages"
-  Reqs: "requirements"
+  Resources:
+    - Categories: "categories"
+    - Options: "options"
+    - Tags: "tags"
+    - Languages: "languages"
+  #Reqs: "requirements"
   Features: "feat"
   #License: "license"
   Donation: "donation"
+  Contact: "contact"
+  information:
+    - About: "about"
+    - Requirements: "requirements"
+    - License: "license_gnu_affero_3"
   
 # --- Footer options --- #
 
@@ -81,6 +86,9 @@ markdown: kramdown
 highlighter: rouge
 permalink: /:year-:month-:day-:title
 paginate: 5
+
+kramdown:
+  input: GFM
 
 # Default YAML values (more information on Jekyll's site)
 defaults:
